Bug #7878 with utf_general_ci, equals (=) has problem with accent insensitivity Backporting Monty's fix for 5.0 into 4.1.